// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`product list ok: threeProducts3Categories 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="row"
        >
          <div
            class="col-lg-8 offset-lg-2"
          >
            <div
              class="card"
            >
              <div
                class="card-body"
              >
                <h1
                  class="title"
                >
                  Products in Dollars App
                </h1>
              </div>
            </div>
          </div>
        </div>
        <div
          class="row mt-4"
        >
          <div
            class="col-lg-6"
          >
            <div
              class="card"
            >
              <div
                class="card-body"
              >
                <h5
                  class="title mb-3"
                >
                  <span>
                    Product Editor
                  </span>
                </h5>
                <form>
                  <div
                    class="form-group"
                  >
                    <label
                      for="nameName"
                    >
                      Name
                    </label>
                    <input
                      class="form-control"
                      data-testid="idName"
                      id="idName"
                      name="nameName"
                      required=""
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="form-group"
                  >
                    <label
                      for="namePrice"
                    >
                      Price
                    </label>
                    <input
                      class="form-control"
                      data-testid="idPrice"
                      id="idPrice"
                      max="200000"
                      min="0"
                      name="namePrice"
                      step="0.001"
                      type="number"
                      value="0"
                    />
                  </div>
                  <div
                    class="form-group"
                  >
                    <label
                      for="nameCategorySelector"
                    >
                      Category
                    </label>
                    <div
                      class="form-control css-b62m3t-container"
                      id="idCategorySelector"
                    >
                      <span
                        class="css-1f43avz-a11yText-A11yText"
                        id="react-select-2-live-region"
                      />
                      <span
                        aria-atomic="false"
                        aria-live="polite"
                        aria-relevant="additions text"
                        class="css-1f43avz-a11yText-A11yText"
                      />
                      <div
                        class=" css-13cymwt-control"
                      >
                        <div
                          class=" css-16674sh-Component"
                        >
                          <div
                            class=" css-1dimb5e-singleValue"
                          />
                          <div
                            class=" css-d9r47t-Component"
                            data-value=""
                          >
                            <input
                              aria-autocomplete="list"
                              aria-expanded="false"
                              aria-haspopup="true"
                              aria-label="idCategorySelector"
                              autocapitalize="none"
                              autocomplete="off"
                              autocorrect="off"
                              class=""
                              id="react-select-2-input"
                              role="combobox"
                              spellcheck="false"
                              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                              tabindex="0"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                        <div
                          class=" css-ny0e4k-Component"
                        >
                          <span
                            class=" css-1u9des2-indicatorSeparator"
                          />
                          <div
                            aria-hidden="true"
                            class=" css-1xc3v61-indicatorContainer"
                          >
                            <svg
                              aria-hidden="true"
                              class="css-tj5bde-Svg"
                              focusable="false"
                              height="20"
                              viewBox="0 0 20 20"
                              width="20"
                            >
                              <path
                                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                      <input
                        name="nameCategorySelector"
                        type="hidden"
                        value="0"
                      />
                    </div>
                  </div>
                  <div
                    class="d-grid gap-2"
                  >
                    <button
                      class="btn btn-success btn-lg"
                      data-testid="idProductEditorButton"
                      disabled=""
                      id="idProductEditorButton"
                      type="button"
                    >
                      <i
                        class="fas fa-database"
                      />
                      add
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
          <div
            class="col-lg-6"
          >
            <div
              class="card"
            >
              <div
                class="card-body"
              >
                <h5
                  class="title"
                >
                  Product List
                </h5>
                <table
                  class="table"
                >
                  <tbody
                    data-testid="idTableProducts"
                  >
                    <tr>
                      <td>
                        id01
                      </td>
                      <td>
                        name01
                      </td>
                      <td>
                        1
                      </td>
                      <td>
                        23-05-1995
                      </td>
                      <td>
                        name01
                      </td>
                      <td>
                        picture01
                      </td>
                      <td>
                        <svg
                          class="text-info"
                          data-testid="edit0"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 448 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M400 480H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zM238.1 177.9L102.4 313.6l-6.3 57.1c-.8 7.6 5.6 14.1 13.3 13.3l57.1-6.3L302.2 242c2.3-2.3 2.3-6.1 0-8.5L246.7 178c-2.5-2.4-6.3-2.4-8.6-.1zM345 165.1L314.9 135c-9.4-9.4-24.6-9.4-33.9 0l-23.1 23.1c-2.3 2.3-2.3 6.1 0 8.5l55.5 55.5c2.3 2.3 6.1 2.3 8.5 0L345 199c9.3-9.3 9.3-24.5 0-33.9z"
                          />
                        </svg>
                        <svg
                          class="text-danger"
                          data-testid="delete0"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 448 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                          />
                        </svg>
                      </td>
                    </tr>
                    <tr>
                      <td>
                        id02
                      </td>
                      <td>
                        name02
                      </td>
                      <td>
                        2.56
                      </td>
                      <td>
                        23-05-1995
                      </td>
                      <td>
                        name02
                      </td>
                      <td>
                        picture02
                      </td>
                      <td>
                        <svg
                          class="text-info"
                          data-testid="edit1"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 448 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M400 480H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zM238.1 177.9L102.4 313.6l-6.3 57.1c-.8 7.6 5.6 14.1 13.3 13.3l57.1-6.3L302.2 242c2.3-2.3 2.3-6.1 0-8.5L246.7 178c-2.5-2.4-6.3-2.4-8.6-.1zM345 165.1L314.9 135c-9.4-9.4-24.6-9.4-33.9 0l-23.1 23.1c-2.3 2.3-2.3 6.1 0 8.5l55.5 55.5c2.3 2.3 6.1 2.3 8.5 0L345 199c9.3-9.3 9.3-24.5 0-33.9z"
                          />
                        </svg>
                        <svg
                          class="text-danger"
                          data-testid="delete1"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 448 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                          />
                        </svg>
                      </td>
                    </tr>
                    <tr>
                      <td>
                        id03
                      </td>
                      <td>
                        name03
                      </td>
                      <td>
                        3.3
                      </td>
                      <td>
                        23-05-1995
                      </td>
                      <td>
                        name01
                      </td>
                      <td>
                        picture03
                      </td>
                      <td>
                        <svg
                          class="text-info"
                          data-testid="edit2"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 448 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M400 480H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zM238.1 177.9L102.4 313.6l-6.3 57.1c-.8 7.6 5.6 14.1 13.3 13.3l57.1-6.3L302.2 242c2.3-2.3 2.3-6.1 0-8.5L246.7 178c-2.5-2.4-6.3-2.4-8.6-.1zM345 165.1L314.9 135c-9.4-9.4-24.6-9.4-33.9 0l-23.1 23.1c-2.3 2.3-2.3 6.1 0 8.5l55.5 55.5c2.3 2.3 6.1 2.3 8.5 0L345 199c9.3-9.3 9.3-24.5 0-33.9z"
                          />
                        </svg>
                        <svg
                          class="text-danger"
                          data-testid="delete2"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 448 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                          />
                        </svg>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="row"
      >
        <div
          class="col-lg-8 offset-lg-2"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <h1
                class="title"
              >
                Products in Dollars App
              </h1>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row mt-4"
      >
        <div
          class="col-lg-6"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <h5
                class="title mb-3"
              >
                <span>
                  Product Editor
                </span>
              </h5>
              <form>
                <div
                  class="form-group"
                >
                  <label
                    for="nameName"
                  >
                    Name
                  </label>
                  <input
                    class="form-control"
                    data-testid="idName"
                    id="idName"
                    name="nameName"
                    required=""
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="form-group"
                >
                  <label
                    for="namePrice"
                  >
                    Price
                  </label>
                  <input
                    class="form-control"
                    data-testid="idPrice"
                    id="idPrice"
                    max="200000"
                    min="0"
                    name="namePrice"
                    step="0.001"
                    type="number"
                    value="0"
                  />
                </div>
                <div
                  class="form-group"
                >
                  <label
                    for="nameCategorySelector"
                  >
                    Category
                  </label>
                  <div
                    class="form-control css-b62m3t-container"
                    id="idCategorySelector"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-2-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class=" css-13cymwt-control"
                    >
                      <div
                        class=" css-16674sh-Component"
                      >
                        <div
                          class=" css-1dimb5e-singleValue"
                        />
                        <div
                          class=" css-d9r47t-Component"
                          data-value=""
                        >
                          <input
                            aria-autocomplete="list"
                            aria-expanded="false"
                            aria-haspopup="true"
                            aria-label="idCategorySelector"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class=""
                            id="react-select-2-input"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class=" css-ny0e4k-Component"
                      >
                        <span
                          class=" css-1u9des2-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class=" css-1xc3v61-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                    <input
                      name="nameCategorySelector"
                      type="hidden"
                      value="0"
                    />
                  </div>
                </div>
                <div
                  class="d-grid gap-2"
                >
                  <button
                    class="btn btn-success btn-lg"
                    data-testid="idProductEditorButton"
                    disabled=""
                    id="idProductEditorButton"
                    type="button"
                  >
                    <i
                      class="fas fa-database"
                    />
                    add
                  </button>
                </div>
              </form>
            </div>
          </div>
        </div>
        <div
          class="col-lg-6"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <h5
                class="title"
              >
                Product List
              </h5>
              <table
                class="table"
              >
                <tbody
                  data-testid="idTableProducts"
                >
                  <tr>
                    <td>
                      id01
                    </td>
                    <td>
                      name01
                    </td>
                    <td>
                      1
                    </td>
                    <td>
                      23-05-1995
                    </td>
                    <td>
                      name01
                    </td>
                    <td>
                      picture01
                    </td>
                    <td>
                      <svg
                        class="text-info"
                        data-testid="edit0"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 448 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M400 480H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zM238.1 177.9L102.4 313.6l-6.3 57.1c-.8 7.6 5.6 14.1 13.3 13.3l57.1-6.3L302.2 242c2.3-2.3 2.3-6.1 0-8.5L246.7 178c-2.5-2.4-6.3-2.4-8.6-.1zM345 165.1L314.9 135c-9.4-9.4-24.6-9.4-33.9 0l-23.1 23.1c-2.3 2.3-2.3 6.1 0 8.5l55.5 55.5c2.3 2.3 6.1 2.3 8.5 0L345 199c9.3-9.3 9.3-24.5 0-33.9z"
                        />
                      </svg>
                      <svg
                        class="text-danger"
                        data-testid="delete0"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 448 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                        />
                      </svg>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      id02
                    </td>
                    <td>
                      name02
                    </td>
                    <td>
                      2.56
                    </td>
                    <td>
                      23-05-1995
                    </td>
                    <td>
                      name02
                    </td>
                    <td>
                      picture02
                    </td>
                    <td>
                      <svg
                        class="text-info"
                        data-testid="edit1"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 448 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M400 480H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zM238.1 177.9L102.4 313.6l-6.3 57.1c-.8 7.6 5.6 14.1 13.3 13.3l57.1-6.3L302.2 242c2.3-2.3 2.3-6.1 0-8.5L246.7 178c-2.5-2.4-6.3-2.4-8.6-.1zM345 165.1L314.9 135c-9.4-9.4-24.6-9.4-33.9 0l-23.1 23.1c-2.3 2.3-2.3 6.1 0 8.5l55.5 55.5c2.3 2.3 6.1 2.3 8.5 0L345 199c9.3-9.3 9.3-24.5 0-33.9z"
                        />
                      </svg>
                      <svg
                        class="text-danger"
                        data-testid="delete1"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 448 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                        />
                      </svg>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      id03
                    </td>
                    <td>
                      name03
                    </td>
                    <td>
                      3.3
                    </td>
                    <td>
                      23-05-1995
                    </td>
                    <td>
                      name01
                    </td>
                    <td>
                      picture03
                    </td>
                    <td>
                      <svg
                        class="text-info"
                        data-testid="edit2"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 448 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M400 480H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zM238.1 177.9L102.4 313.6l-6.3 57.1c-.8 7.6 5.6 14.1 13.3 13.3l57.1-6.3L302.2 242c2.3-2.3 2.3-6.1 0-8.5L246.7 178c-2.5-2.4-6.3-2.4-8.6-.1zM345 165.1L314.9 135c-9.4-9.4-24.6-9.4-33.9 0l-23.1 23.1c-2.3 2.3-2.3 6.1 0 8.5l55.5 55.5c2.3 2.3 6.1 2.3 8.5 0L345 199c9.3-9.3 9.3-24.5 0-33.9z"
                        />
                      </svg>
                      <svg
                        class="text-danger"
                        data-testid="delete2"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 448 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                        />
                      </svg>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`remove product ok: removed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="row"
        >
          <div
            class="col-lg-8 offset-lg-2"
          >
            <div
              class="card"
            >
              <div
                class="card-body"
              >
                <h1
                  class="title"
                >
                  Products in Dollars App
                </h1>
              </div>
            </div>
          </div>
        </div>
        <div
          class="row mt-4"
        >
          <div
            class="col-lg-6"
          >
            <div
              class="card"
            >
              <div
                class="card-body"
              >
                <h5
                  class="title mb-3"
                >
                  <span>
                    Product Editor
                  </span>
                </h5>
                <form>
                  <div
                    class="form-group"
                  >
                    <label
                      for="nameName"
                    >
                      Name
                    </label>
                    <input
                      class="form-control"
                      data-testid="idName"
                      id="idName"
                      name="nameName"
                      required=""
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="form-group"
                  >
                    <label
                      for="namePrice"
                    >
                      Price
                    </label>
                    <input
                      class="form-control"
                      data-testid="idPrice"
                      id="idPrice"
                      max="200000"
                      min="0"
                      name="namePrice"
                      step="0.001"
                      type="number"
                      value="0"
                    />
                  </div>
                  <div
                    class="form-group"
                  >
                    <label
                      for="nameCategorySelector"
                    >
                      Category
                    </label>
                    <div
                      class="form-control css-b62m3t-container"
                      id="idCategorySelector"
                    >
                      <span
                        class="css-1f43avz-a11yText-A11yText"
                        id="react-select-5-live-region"
                      />
                      <span
                        aria-atomic="false"
                        aria-live="polite"
                        aria-relevant="additions text"
                        class="css-1f43avz-a11yText-A11yText"
                      />
                      <div
                        class=" css-13cymwt-control"
                      >
                        <div
                          class=" css-16674sh-Component"
                        >
                          <div
                            class=" css-1dimb5e-singleValue"
                          />
                          <div
                            class=" css-d9r47t-Component"
                            data-value=""
                          >
                            <input
                              aria-autocomplete="list"
                              aria-expanded="false"
                              aria-haspopup="true"
                              aria-label="idCategorySelector"
                              autocapitalize="none"
                              autocomplete="off"
                              autocorrect="off"
                              class=""
                              id="react-select-5-input"
                              role="combobox"
                              spellcheck="false"
                              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                              tabindex="0"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                        <div
                          class=" css-ny0e4k-Component"
                        >
                          <span
                            class=" css-1u9des2-indicatorSeparator"
                          />
                          <div
                            aria-hidden="true"
                            class=" css-1xc3v61-indicatorContainer"
                          >
                            <svg
                              aria-hidden="true"
                              class="css-tj5bde-Svg"
                              focusable="false"
                              height="20"
                              viewBox="0 0 20 20"
                              width="20"
                            >
                              <path
                                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                      <input
                        name="nameCategorySelector"
                        type="hidden"
                        value="0"
                      />
                    </div>
                  </div>
                  <div
                    class="d-grid gap-2"
                  >
                    <button
                      class="btn btn-success btn-lg"
                      data-testid="idProductEditorButton"
                      disabled=""
                      id="idProductEditorButton"
                      type="button"
                    >
                      <i
                        class="fas fa-database"
                      />
                      add
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
          <div
            class="col-lg-6"
          >
            <div
              class="card"
            >
              <div
                class="card-body"
              >
                <h5
                  class="title"
                >
                  Product List
                </h5>
                <table
                  class="table"
                >
                  <tbody
                    data-testid="idTableProducts"
                  >
                    <tr>
                      <td>
                        id01
                      </td>
                      <td>
                        name01
                      </td>
                      <td>
                        1
                      </td>
                      <td>
                        23-05-1995
                      </td>
                      <td>
                        name01
                      </td>
                      <td>
                        picture01
                      </td>
                      <td>
                        <svg
                          class="text-info"
                          data-testid="edit0"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 448 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M400 480H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zM238.1 177.9L102.4 313.6l-6.3 57.1c-.8 7.6 5.6 14.1 13.3 13.3l57.1-6.3L302.2 242c2.3-2.3 2.3-6.1 0-8.5L246.7 178c-2.5-2.4-6.3-2.4-8.6-.1zM345 165.1L314.9 135c-9.4-9.4-24.6-9.4-33.9 0l-23.1 23.1c-2.3 2.3-2.3 6.1 0 8.5l55.5 55.5c2.3 2.3 6.1 2.3 8.5 0L345 199c9.3-9.3 9.3-24.5 0-33.9z"
                          />
                        </svg>
                        <svg
                          class="text-danger"
                          data-testid="delete0"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 448 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                          />
                        </svg>
                      </td>
                    </tr>
                    <tr>
                      <td>
                        id02
                      </td>
                      <td>
                        name02
                      </td>
                      <td>
                        2.56
                      </td>
                      <td>
                        23-05-1995
                      </td>
                      <td>
                        name02
                      </td>
                      <td>
                        picture02
                      </td>
                      <td>
                        <svg
                          class="text-info"
                          data-testid="edit1"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 448 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M400 480H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zM238.1 177.9L102.4 313.6l-6.3 57.1c-.8 7.6 5.6 14.1 13.3 13.3l57.1-6.3L302.2 242c2.3-2.3 2.3-6.1 0-8.5L246.7 178c-2.5-2.4-6.3-2.4-8.6-.1zM345 165.1L314.9 135c-9.4-9.4-24.6-9.4-33.9 0l-23.1 23.1c-2.3 2.3-2.3 6.1 0 8.5l55.5 55.5c2.3 2.3 6.1 2.3 8.5 0L345 199c9.3-9.3 9.3-24.5 0-33.9z"
                          />
                        </svg>
                        <svg
                          class="text-danger"
                          data-testid="delete1"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 448 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                          />
                        </svg>
                      </td>
                    </tr>
                    <tr>
                      <td>
                        id03
                      </td>
                      <td>
                        name03
                      </td>
                      <td>
                        3.3
                      </td>
                      <td>
                        23-05-1995
                      </td>
                      <td>
                        name01
                      </td>
                      <td>
                        picture03
                      </td>
                      <td>
                        <svg
                          class="text-info"
                          data-testid="edit2"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 448 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M400 480H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zM238.1 177.9L102.4 313.6l-6.3 57.1c-.8 7.6 5.6 14.1 13.3 13.3l57.1-6.3L302.2 242c2.3-2.3 2.3-6.1 0-8.5L246.7 178c-2.5-2.4-6.3-2.4-8.6-.1zM345 165.1L314.9 135c-9.4-9.4-24.6-9.4-33.9 0l-23.1 23.1c-2.3 2.3-2.3 6.1 0 8.5l55.5 55.5c2.3 2.3 6.1 2.3 8.5 0L345 199c9.3-9.3 9.3-24.5 0-33.9z"
                          />
                        </svg>
                        <svg
                          class="text-danger"
                          data-testid="delete2"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 448 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                          />
                        </svg>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="row"
      >
        <div
          class="col-lg-8 offset-lg-2"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <h1
                class="title"
              >
                Products in Dollars App
              </h1>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row mt-4"
      >
        <div
          class="col-lg-6"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <h5
                class="title mb-3"
              >
                <span>
                  Product Editor
                </span>
              </h5>
              <form>
                <div
                  class="form-group"
                >
                  <label
                    for="nameName"
                  >
                    Name
                  </label>
                  <input
                    class="form-control"
                    data-testid="idName"
                    id="idName"
                    name="nameName"
                    required=""
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="form-group"
                >
                  <label
                    for="namePrice"
                  >
                    Price
                  </label>
                  <input
                    class="form-control"
                    data-testid="idPrice"
                    id="idPrice"
                    max="200000"
                    min="0"
                    name="namePrice"
                    step="0.001"
                    type="number"
                    value="0"
                  />
                </div>
                <div
                  class="form-group"
                >
                  <label
                    for="nameCategorySelector"
                  >
                    Category
                  </label>
                  <div
                    class="form-control css-b62m3t-container"
                    id="idCategorySelector"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-5-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class=" css-13cymwt-control"
                    >
                      <div
                        class=" css-16674sh-Component"
                      >
                        <div
                          class=" css-1dimb5e-singleValue"
                        />
                        <div
                          class=" css-d9r47t-Component"
                          data-value=""
                        >
                          <input
                            aria-autocomplete="list"
                            aria-expanded="false"
                            aria-haspopup="true"
                            aria-label="idCategorySelector"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class=""
                            id="react-select-5-input"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class=" css-ny0e4k-Component"
                      >
                        <span
                          class=" css-1u9des2-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class=" css-1xc3v61-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                    <input
                      name="nameCategorySelector"
                      type="hidden"
                      value="0"
                    />
                  </div>
                </div>
                <div
                  class="d-grid gap-2"
                >
                  <button
                    class="btn btn-success btn-lg"
                    data-testid="idProductEditorButton"
                    disabled=""
                    id="idProductEditorButton"
                    type="button"
                  >
                    <i
                      class="fas fa-database"
                    />
                    add
                  </button>
                </div>
              </form>
            </div>
          </div>
        </div>
        <div
          class="col-lg-6"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <h5
                class="title"
              >
                Product List
              </h5>
              <table
                class="table"
              >
                <tbody
                  data-testid="idTableProducts"
                >
                  <tr>
                    <td>
                      id01
                    </td>
                    <td>
                      name01
                    </td>
                    <td>
                      1
                    </td>
                    <td>
                      23-05-1995
                    </td>
                    <td>
                      name01
                    </td>
                    <td>
                      picture01
                    </td>
                    <td>
                      <svg
                        class="text-info"
                        data-testid="edit0"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 448 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M400 480H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zM238.1 177.9L102.4 313.6l-6.3 57.1c-.8 7.6 5.6 14.1 13.3 13.3l57.1-6.3L302.2 242c2.3-2.3 2.3-6.1 0-8.5L246.7 178c-2.5-2.4-6.3-2.4-8.6-.1zM345 165.1L314.9 135c-9.4-9.4-24.6-9.4-33.9 0l-23.1 23.1c-2.3 2.3-2.3 6.1 0 8.5l55.5 55.5c2.3 2.3 6.1 2.3 8.5 0L345 199c9.3-9.3 9.3-24.5 0-33.9z"
                        />
                      </svg>
                      <svg
                        class="text-danger"
                        data-testid="delete0"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 448 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                        />
                      </svg>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      id02
                    </td>
                    <td>
                      name02
                    </td>
                    <td>
                      2.56
                    </td>
                    <td>
                      23-05-1995
                    </td>
                    <td>
                      name02
                    </td>
                    <td>
                      picture02
                    </td>
                    <td>
                      <svg
                        class="text-info"
                        data-testid="edit1"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 448 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M400 480H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zM238.1 177.9L102.4 313.6l-6.3 57.1c-.8 7.6 5.6 14.1 13.3 13.3l57.1-6.3L302.2 242c2.3-2.3 2.3-6.1 0-8.5L246.7 178c-2.5-2.4-6.3-2.4-8.6-.1zM345 165.1L314.9 135c-9.4-9.4-24.6-9.4-33.9 0l-23.1 23.1c-2.3 2.3-2.3 6.1 0 8.5l55.5 55.5c2.3 2.3 6.1 2.3 8.5 0L345 199c9.3-9.3 9.3-24.5 0-33.9z"
                        />
                      </svg>
                      <svg
                        class="text-danger"
                        data-testid="delete1"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 448 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                        />
                      </svg>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      id03
                    </td>
                    <td>
                      name03
                    </td>
                    <td>
                      3.3
                    </td>
                    <td>
                      23-05-1995
                    </td>
                    <td>
                      name01
                    </td>
                    <td>
                      picture03
                    </td>
                    <td>
                      <svg
                        class="text-info"
                        data-testid="edit2"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 448 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M400 480H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zM238.1 177.9L102.4 313.6l-6.3 57.1c-.8 7.6 5.6 14.1 13.3 13.3l57.1-6.3L302.2 242c2.3-2.3 2.3-6.1 0-8.5L246.7 178c-2.5-2.4-6.3-2.4-8.6-.1zM345 165.1L314.9 135c-9.4-9.4-24.6-9.4-33.9 0l-23.1 23.1c-2.3 2.3-2.3 6.1 0 8.5l55.5 55.5c2.3 2.3 6.1 2.3 8.5 0L345 199c9.3-9.3 9.3-24.5 0-33.9z"
                        />
                      </svg>
                      <svg
                        class="text-danger"
                        data-testid="delete2"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 448 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                        />
                      </svg>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`save edited product ok: saveEdited 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="row"
        >
          <div
            class="col-lg-8 offset-lg-2"
          >
            <div
              class="card"
            >
              <div
                class="card-body"
              >
                <h1
                  class="title"
                >
                  Products in Dollars App
                </h1>
              </div>
            </div>
          </div>
        </div>
        <div
          class="row mt-4"
        >
          <div
            class="col-lg-6"
          >
            <div
              class="card"
            >
              <div
                class="card-body"
              >
                <h5
                  class="title mb-3"
                >
                  <span>
                    Product Editor
                  </span>
                </h5>
                <form>
                  <div
                    class="form-group"
                  >
                    <label
                      for="nameName"
                    >
                      Name
                    </label>
                    <input
                      class="form-control"
                      data-testid="idName"
                      id="idName"
                      name="nameName"
                      required=""
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="form-group"
                  >
                    <label
                      for="namePrice"
                    >
                      Price
                    </label>
                    <input
                      class="form-control"
                      data-testid="idPrice"
                      id="idPrice"
                      max="200000"
                      min="0"
                      name="namePrice"
                      step="0.001"
                      type="number"
                      value="0"
                    />
                  </div>
                  <div
                    class="form-group"
                  >
                    <label
                      for="nameCategorySelector"
                    >
                      Category
                    </label>
                    <div
                      class="form-control css-b62m3t-container"
                      id="idCategorySelector"
                    >
                      <span
                        class="css-1f43avz-a11yText-A11yText"
                        id="react-select-4-live-region"
                      />
                      <span
                        aria-atomic="false"
                        aria-live="polite"
                        aria-relevant="additions text"
                        class="css-1f43avz-a11yText-A11yText"
                      />
                      <div
                        class=" css-13cymwt-control"
                      >
                        <div
                          class=" css-16674sh-Component"
                        >
                          <div
                            class=" css-1dimb5e-singleValue"
                          />
                          <div
                            class=" css-d9r47t-Component"
                            data-value=""
                          >
                            <input
                              aria-autocomplete="list"
                              aria-expanded="false"
                              aria-haspopup="true"
                              aria-label="idCategorySelector"
                              autocapitalize="none"
                              autocomplete="off"
                              autocorrect="off"
                              class=""
                              id="react-select-4-input"
                              role="combobox"
                              spellcheck="false"
                              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                              tabindex="0"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                        <div
                          class=" css-ny0e4k-Component"
                        >
                          <span
                            class=" css-1u9des2-indicatorSeparator"
                          />
                          <div
                            aria-hidden="true"
                            class=" css-1xc3v61-indicatorContainer"
                          >
                            <svg
                              aria-hidden="true"
                              class="css-tj5bde-Svg"
                              focusable="false"
                              height="20"
                              viewBox="0 0 20 20"
                              width="20"
                            >
                              <path
                                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                      <input
                        name="nameCategorySelector"
                        type="hidden"
                        value="0"
                      />
                    </div>
                  </div>
                  <div
                    class="d-grid gap-2"
                  >
                    <button
                      class="btn btn-success btn-lg"
                      data-testid="idProductEditorButton"
                      id="idProductEditorButton"
                      type="button"
                    >
                      <i
                        class="fas fa-database"
                      />
                      add
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
          <div
            class="col-lg-6"
          >
            <div
              class="card"
            >
              <div
                class="card-body"
              >
                <h5
                  class="title"
                >
                  Product List
                </h5>
                <table
                  class="table"
                >
                  <tbody
                    data-testid="idTableProducts"
                  >
                    <tr>
                      <td>
                        id01
                      </td>
                      <td>
                        name01
                      </td>
                      <td>
                        1
                      </td>
                      <td>
                        23-05-1995
                      </td>
                      <td>
                        name01
                      </td>
                      <td>
                        picture01
                      </td>
                      <td>
                        <svg
                          class="text-info"
                          data-testid="edit0"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 448 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M400 480H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zM238.1 177.9L102.4 313.6l-6.3 57.1c-.8 7.6 5.6 14.1 13.3 13.3l57.1-6.3L302.2 242c2.3-2.3 2.3-6.1 0-8.5L246.7 178c-2.5-2.4-6.3-2.4-8.6-.1zM345 165.1L314.9 135c-9.4-9.4-24.6-9.4-33.9 0l-23.1 23.1c-2.3 2.3-2.3 6.1 0 8.5l55.5 55.5c2.3 2.3 6.1 2.3 8.5 0L345 199c9.3-9.3 9.3-24.5 0-33.9z"
                          />
                        </svg>
                        <svg
                          class="text-danger"
                          data-testid="delete0"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 448 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                          />
                        </svg>
                      </td>
                    </tr>
                    <tr>
                      <td>
                        id02
                      </td>
                      <td>
                        name02
                      </td>
                      <td>
                        2.56
                      </td>
                      <td>
                        23-05-1995
                      </td>
                      <td>
                        name02
                      </td>
                      <td>
                        picture02
                      </td>
                      <td>
                        <svg
                          class="text-info"
                          data-testid="edit1"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 448 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M400 480H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zM238.1 177.9L102.4 313.6l-6.3 57.1c-.8 7.6 5.6 14.1 13.3 13.3l57.1-6.3L302.2 242c2.3-2.3 2.3-6.1 0-8.5L246.7 178c-2.5-2.4-6.3-2.4-8.6-.1zM345 165.1L314.9 135c-9.4-9.4-24.6-9.4-33.9 0l-23.1 23.1c-2.3 2.3-2.3 6.1 0 8.5l55.5 55.5c2.3 2.3 6.1 2.3 8.5 0L345 199c9.3-9.3 9.3-24.5 0-33.9z"
                          />
                        </svg>
                        <svg
                          class="text-danger"
                          data-testid="delete1"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 448 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                          />
                        </svg>
                      </td>
                    </tr>
                    <tr>
                      <td>
                        id03
                      </td>
                      <td>
                        name03
                      </td>
                      <td>
                        3.3
                      </td>
                      <td>
                        23-05-1995
                      </td>
                      <td>
                        name01
                      </td>
                      <td>
                        picture03
                      </td>
                      <td>
                        <svg
                          class="text-info"
                          data-testid="edit2"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 448 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M400 480H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zM238.1 177.9L102.4 313.6l-6.3 57.1c-.8 7.6 5.6 14.1 13.3 13.3l57.1-6.3L302.2 242c2.3-2.3 2.3-6.1 0-8.5L246.7 178c-2.5-2.4-6.3-2.4-8.6-.1zM345 165.1L314.9 135c-9.4-9.4-24.6-9.4-33.9 0l-23.1 23.1c-2.3 2.3-2.3 6.1 0 8.5l55.5 55.5c2.3 2.3 6.1 2.3 8.5 0L345 199c9.3-9.3 9.3-24.5 0-33.9z"
                          />
                        </svg>
                        <svg
                          class="text-danger"
                          data-testid="delete2"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 448 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                          />
                        </svg>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="row"
      >
        <div
          class="col-lg-8 offset-lg-2"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <h1
                class="title"
              >
                Products in Dollars App
              </h1>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row mt-4"
      >
        <div
          class="col-lg-6"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <h5
                class="title mb-3"
              >
                <span>
                  Product Editor
                </span>
              </h5>
              <form>
                <div
                  class="form-group"
                >
                  <label
                    for="nameName"
                  >
                    Name
                  </label>
                  <input
                    class="form-control"
                    data-testid="idName"
                    id="idName"
                    name="nameName"
                    required=""
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="form-group"
                >
                  <label
                    for="namePrice"
                  >
                    Price
                  </label>
                  <input
                    class="form-control"
                    data-testid="idPrice"
                    id="idPrice"
                    max="200000"
                    min="0"
                    name="namePrice"
                    step="0.001"
                    type="number"
                    value="0"
                  />
                </div>
                <div
                  class="form-group"
                >
                  <label
                    for="nameCategorySelector"
                  >
                    Category
                  </label>
                  <div
                    class="form-control css-b62m3t-container"
                    id="idCategorySelector"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-4-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class=" css-13cymwt-control"
                    >
                      <div
                        class=" css-16674sh-Component"
                      >
                        <div
                          class=" css-1dimb5e-singleValue"
                        />
                        <div
                          class=" css-d9r47t-Component"
                          data-value=""
                        >
                          <input
                            aria-autocomplete="list"
                            aria-expanded="false"
                            aria-haspopup="true"
                            aria-label="idCategorySelector"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class=""
                            id="react-select-4-input"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class=" css-ny0e4k-Component"
                      >
                        <span
                          class=" css-1u9des2-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class=" css-1xc3v61-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                    <input
                      name="nameCategorySelector"
                      type="hidden"
                      value="0"
                    />
                  </div>
                </div>
                <div
                  class="d-grid gap-2"
                >
                  <button
                    class="btn btn-success btn-lg"
                    data-testid="idProductEditorButton"
                    id="idProductEditorButton"
                    type="button"
                  >
                    <i
                      class="fas fa-database"
                    />
                    add
                  </button>
                </div>
              </form>
            </div>
          </div>
        </div>
        <div
          class="col-lg-6"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <h5
                class="title"
              >
                Product List
              </h5>
              <table
                class="table"
              >
                <tbody
                  data-testid="idTableProducts"
                >
                  <tr>
                    <td>
                      id01
                    </td>
                    <td>
                      name01
                    </td>
                    <td>
                      1
                    </td>
                    <td>
                      23-05-1995
                    </td>
                    <td>
                      name01
                    </td>
                    <td>
                      picture01
                    </td>
                    <td>
                      <svg
                        class="text-info"
                        data-testid="edit0"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 448 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M400 480H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zM238.1 177.9L102.4 313.6l-6.3 57.1c-.8 7.6 5.6 14.1 13.3 13.3l57.1-6.3L302.2 242c2.3-2.3 2.3-6.1 0-8.5L246.7 178c-2.5-2.4-6.3-2.4-8.6-.1zM345 165.1L314.9 135c-9.4-9.4-24.6-9.4-33.9 0l-23.1 23.1c-2.3 2.3-2.3 6.1 0 8.5l55.5 55.5c2.3 2.3 6.1 2.3 8.5 0L345 199c9.3-9.3 9.3-24.5 0-33.9z"
                        />
                      </svg>
                      <svg
                        class="text-danger"
                        data-testid="delete0"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 448 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                        />
                      </svg>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      id02
                    </td>
                    <td>
                      name02
                    </td>
                    <td>
                      2.56
                    </td>
                    <td>
                      23-05-1995
                    </td>
                    <td>
                      name02
                    </td>
                    <td>
                      picture02
                    </td>
                    <td>
                      <svg
                        class="text-info"
                        data-testid="edit1"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 448 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M400 480H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zM238.1 177.9L102.4 313.6l-6.3 57.1c-.8 7.6 5.6 14.1 13.3 13.3l57.1-6.3L302.2 242c2.3-2.3 2.3-6.1 0-8.5L246.7 178c-2.5-2.4-6.3-2.4-8.6-.1zM345 165.1L314.9 135c-9.4-9.4-24.6-9.4-33.9 0l-23.1 23.1c-2.3 2.3-2.3 6.1 0 8.5l55.5 55.5c2.3 2.3 6.1 2.3 8.5 0L345 199c9.3-9.3 9.3-24.5 0-33.9z"
                        />
                      </svg>
                      <svg
                        class="text-danger"
                        data-testid="delete1"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 448 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                        />
                      </svg>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      id03
                    </td>
                    <td>
                      name03
                    </td>
                    <td>
                      3.3
                    </td>
                    <td>
                      23-05-1995
                    </td>
                    <td>
                      name01
                    </td>
                    <td>
                      picture03
                    </td>
                    <td>
                      <svg
                        class="text-info"
                        data-testid="edit2"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 448 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M400 480H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zM238.1 177.9L102.4 313.6l-6.3 57.1c-.8 7.6 5.6 14.1 13.3 13.3l57.1-6.3L302.2 242c2.3-2.3 2.3-6.1 0-8.5L246.7 178c-2.5-2.4-6.3-2.4-8.6-.1zM345 165.1L314.9 135c-9.4-9.4-24.6-9.4-33.9 0l-23.1 23.1c-2.3 2.3-2.3 6.1 0 8.5l55.5 55.5c2.3 2.3 6.1 2.3 8.5 0L345 199c9.3-9.3 9.3-24.5 0-33.9z"
                        />
                      </svg>
                      <svg
                        class="text-danger"
                        data-testid="delete2"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 448 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                        />
                      </svg>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
